<resources>
    <string name="app_name">KitchenMate</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="newUserHint">New user? Click</string>
    <string name="oldUserHint">Already Have account? Click to</string>
</resources>